@@ -1,10 +1,0 @@
-WIDE stands for 'The While IDE', an integrated development environment for the
-While programming language.
-
-With WIDE you will be able to:
-
-   1. Create and edit While Programs written in standard list concrete syntax,
-      and a novel textual (string) syntax developed exclusively for WIDE.
-   2. Compile and Run While Programs.
-   3. Debug Programs.
-   4. Easily experiment with meta-programming ideas and concepts.
