@@ -1,154 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2009/06/14 17:49:17 joerg Exp $
-bin/wide
-libexec/wide/lib/jide-common.jar
-libexec/wide/lib/novaworx.jar
-libexec/wide/lib/wide.jar
-libexec/wide/lib/widex.jar
-share/wide/Study/AddNumbers.wcl
-share/wide/Study/AddNumbers.while
-share/wide/Study/Casing.while
-share/wide/Study/ID.while
-share/wide/Study/ID_while.while
-share/wide/Study/ID_while_1.while
-share/wide/Study/Loop4Ever.wcl
-share/wide/Study/Loop4Ever.while
-share/wide/Study/Test1.while
-share/wide/Study/fix.wcl
-share/wide/Study/fix.while
-share/wide/Study/pred.wcl
-share/wide/Study/pred.while
-share/wide/Study/succ.wcl
-share/wide/Study/succ.while
-share/wide/etc/syntax.catalog.xml
-share/wide/etc/syntax/wcl.xml
-share/wide/etc/syntax/wct.xml
-share/wide/help/compile.html
-share/wide/help/compile.png
-share/wide/help/debug.html
-share/wide/help/debug_1.png
-share/wide/help/debug_2.png
-share/wide/help/execution.html
-share/wide/help/execution_1.png
-share/wide/help/ide_debug_pane.png
-share/wide/help/ide_options.html
-share/wide/help/ide_panes.html
-share/wide/help/ide_run.png
-share/wide/help/ide_run_suspend.png
-share/wide/help/ide_tree.html
-share/wide/help/ide_tree2.png
-share/wide/help/ide_tree3.png
-share/wide/help/images/compile.png
-share/wide/help/images/execute.png
-share/wide/help/images/resume.png
-share/wide/help/images/runToCursor.png
-share/wide/help/images/showCurrentFrame.png
-share/wide/help/images/showViewer.png
-share/wide/help/images/startDebugger.png
-share/wide/help/images/suspend.png
-share/wide/help/images/traceOver.png
-share/wide/help/lang_cnst.html
-share/wide/help/lang_intro.html
-share/wide/help/lang_list.html
-share/wide/help/lang_string.html
-share/wide/help/messages_error.png
-share/wide/help/newfile.png
-share/wide/help/options.png
-share/wide/help/options/cube.gif
-share/wide/help/options/sugars.html
-share/wide/help/options/sugars.html.bak
-share/wide/help/options/title.png
-share/wide/help/sp.gif
-share/wide/help/wide_intro.html
-share/wide/images/action/execute.png
-share/wide/images/action/find.png
-share/wide/images/action/help.png
-share/wide/images/action/replace.png
-share/wide/images/action/resume.png
-share/wide/images/action/runToCursor.png
-share/wide/images/action/showCurrentFrame.png
-share/wide/images/action/showViewer.png
-share/wide/images/action/startDebugger.png
-share/wide/images/action/stepover_co.gif
-share/wide/images/action/suspend.png
-share/wide/images/action/traceOver.png
-share/wide/images/autoscrollToSource.png
-share/wide/images/await.gif
-share/wide/images/bp.png
-share/wide/images/compile.png
-share/wide/images/empty.gif
-share/wide/images/execution/testError.png
-share/wide/images/execution/testInProgress1.png
-share/wide/images/execution/testInProgress2.png
-share/wide/images/execution/testInProgress3.png
-share/wide/images/execution/testInProgress4.png
-share/wide/images/execution/testInProgress5.png
-share/wide/images/execution/testInProgress6.png
-share/wide/images/execution/testInProgress7.png
-share/wide/images/execution/testInProgress8.png
-share/wide/images/execution/testPassed.png
-share/wide/images/execution/testTerminated.png
-share/wide/images/fileTypes/list.gif
-share/wide/images/fileTypes/text.gif
-share/wide/images/fileTypes/unknown.gif
-share/wide/images/help.png
-share/wide/images/help_window_hide_tabs.gif
-share/wide/images/help_window_icon.gif
-share/wide/images/help_window_show_tabs.gif
-share/wide/images/help_window_tree_closed.gif
-share/wide/images/help_window_tree_leaf.gif
-share/wide/images/help_window_tree_open.gif
-share/wide/images/ide_edit_copy.gif
-share/wide/images/ide_edit_cut.gif
-share/wide/images/ide_edit_delete.gif
-share/wide/images/ide_edit_paste.gif
-share/wide/images/ide_edit_redo.gif
-share/wide/images/ide_edit_undo.gif
-share/wide/images/ide_empty.gif
-share/wide/images/ide_help.gif
-share/wide/images/ide_new.gif
-share/wide/images/ide_open.gif
-share/wide/images/ide_print.gif
-share/wide/images/ide_save.gif
-share/wide/images/ide_save_all.gif
-share/wide/images/left.png
-share/wide/images/main.png
-share/wide/images/mirror_cursor.gif
-share/wide/images/msg_error.png
-share/wide/images/msg_info.png
-share/wide/images/msg_question.png
-share/wide/images/msg_warning.png
-share/wide/images/open.gif
-share/wide/images/prnt/NextPage.gif
-share/wide/images/prnt/Orientation.gif
-share/wide/images/prnt/PreviousPage.gif
-share/wide/images/prnt/Print.gif
-share/wide/images/prnt/Reset.gif
-share/wide/images/prnt/ScaleIn.gif
-share/wide/images/prnt/ScaleOut.gif
-share/wide/images/prnt/Setup.gif
-share/wide/images/prnt/ZoomIn.gif
-share/wide/images/prnt/ZoomOut.gif
-share/wide/images/remove.gif
-share/wide/images/right.png
-share/wide/images/splash.png
-share/wide/images/table/sort_asc.gif
-share/wide/images/table/sort_desc.gif
-share/wide/images/toggleBreakpoint.png
-share/wide/images/tool/toolWindowDebugger.png
-share/wide/images/tool/toolWindowMessages.png
-share/wide/images/tool/toolWindowRun.png
-share/wide/images/tree.png
-share/wide/images/tree_Closed.gif
-share/wide/images/tree_Leaf.gif
-share/wide/images/tree_Opened.gif
-share/wide/images/tree_fclosed.gif
-share/wide/images/tree_fopened.gif
-share/wide/images/tree_root.gif
-share/wide/images/wcl.bmp
-share/wide/images/wct.bmp
-share/wide/prefs.ini
-share/wide/print.ini
-share/wide/project.xml
-share/wide/sugars.ini
-share/wide/version.txt
-share/wide/widehelp.xml
