@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2015/11/03 03:29:38 agc Exp $
-
-SHA1 (wide.zip) = 1dd8ae8e13bdd104954c301f987345e26c1a6b8c
-RMD160 (wide.zip) = b9323ec30919c08ac6c5bb3d0be0917326231deb
-SHA512 (wide.zip) = 9f794f4d7d4ea74f6e441dce555c06f2af99f24a7b51d23652d34f472aad30ded96bdf02db2a543c8e7c47ac27ed82e127308f1d78d7f7f7dea9755fe5657a2f
-Size (wide.zip) = 2155839 bytes
