@@ -1,31 +1,0 @@
-#!/bin/sh
-#
-# $NetBSD: wide.in,v 1.2 2008/05/25 20:57:28 joerg Exp $
-
-PREFIX=@PREFIX@
-
-WIDE=${HOME}/.wide
-LINK_DIRS="etc help images"
-COPY_FILES="Study prefs.ini print.ini project.xml sugars.ini widehelp.xml version.txt"
-
-if [ ! -d ${WIDE} ]; then
-	echo -n "Setting up 'wide' in ${WIDE} ..."
-	mkdir ${WIDE}
-	cd ${WIDE}
-	for dir in ${LINK_DIRS}; do
-		ln -s ${PREFIX}/share/wide/${dir}
-	done
-	ln -s ${PREFIX}/libexec/wide/lib
-	cd ${PREFIX}/share/wide/
-	for file in ${COPY_FILES}; do
-		@PAX@ -rw ${file} ${WIDE}/
-	done
-	echo " done."
-fi
-
-WIDE_CP=.:${WIDE}/lib/wide.jar:${WIDE}/lib/widex.jar
-CLASSPATH=${WIDE_CP}:${WIDE}/lib/novaworx.jar:${WIDE}/lib/jide-common.jar
-
-export CLASSPATH
-
-cd ${WIDE} && java whilepack.gui.WhileIDE
